@@ -195,12 +195,10 @@ Recruiting"
                         name= _"Li’sar"
                         canrecruit=yes
                     [/unit]
-                    [lua]
-                        code=<<
-                        local _ = wesnoth.textdomain("wesnoth-tutorial")
-                        wesnoth.sides[1].current_player = tostring(_"Li’sar") --# wmllint: ignore
-                        >>
-                    [/lua]
+                    [modify_side]
+                        side=1
+                        current_player= _"Li’sar"
+                    [/modify_side]
                     [redraw][/redraw]
                 [/command]
             [/option]
