@@ -412,12 +412,10 @@
                 equals=female
             [/variable]
             [then]
-                [lua]
-                    code=<<
-                    local _ = wesnoth.textdomain("wesnoth-tutorial")
-                    wesnoth.sides[1].current_player = tostring(_"Li’sar") --# wmllint: ignore
-                    >>
-                [/lua]
+                [modify_side]
+                    side=1
+                    current_player= _"Li’sar"
+                [/modify_side]
                 [store_unit]
                     [filter]
                         id=student
