@@ -45,6 +45,8 @@ Version 1.9.12+svn:
    * Display turn numbers on multi-turn planned moves
    * Fix attacks not finishing but still being transmitted over the network when
      executing all actions
+*  WML engine:
+   * Made it so that [modify_side] can change the current_player attribute
  * Miscellaneous and bug fixes:
    * Fixed: compilation with clang 3.0 in C++11 mode.
    * Changed: Sort order of campaigns uses a stable sort now.
